# briefing

./: .gitignore  LICENSE  README.md  README_CN.md  TODO.md  briefing.spec  build.bat  config.py  cookies.py  db.py  douyin_downloader.py  downloader.py  launcher.py  main.py  pusher.py  pyproject.toml  requirements.txt  summarizer.py  transcriber.py
.github/workflows/: build.yml
backend/app/: config_schema.py  config_store.py  main.py  runner.py
backend/static/: index.html
data/: config.txt
data/prompts/: brief.txt  deep.txt  headline.txt  outline_trace.txt  recommend.txt
hooks/: rthook_tiktoken.py
packaging/: First Launch (run once).command  briefing.spec  build.bat
packaging/hooks/: rthook_tiktoken.py
scripts/: replay.py
src/briefing/: config.py  cookies.py  db.py  migration.py  pusher.py  transcriber.py  worker.py
src/briefing/downloaders/: douyin_downloader.py  downloader.py
src/briefing/llm/: __init__.py  pricing.py  router.py
src/briefing/summarizer_agent/: __init__.py  evolve.py  pipeline.py  validators.py
src/briefing/summarizer_agent/prompts/: brief.txt  evolve.txt  inspect.txt  outline.txt  recommend.txt  review.txt  short.txt  summarize.txt  translate.txt
src/briefing/test/: replay.py
src/briefing/web/app/: config_schema.py  config_store.py  main.py  runner.py
src/briefing/web/static/: index.html
