[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "briefing"
version = "1.1.4"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "requests[socks]",
    "tiktoken",
    "yt-dlp",
    "f2==0.0.1.7",
    "sqlalchemy",
    "fastapi",
    "uvicorn[standard]",
    "pywebview",
    "faster-whisper",
]

[project.optional-dependencies]
build = ["pyinstaller"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"briefing.summarizer_agent" = ["prompts/*.txt"]
"briefing.web" = ["static/*"]
